--- a/spec/cassettes/vehicle_assembly_groups.yml
+++ b/spec/cassettes/vehicle_assembly_groups.yml
@@ -6,11 +6,11 @@
     body: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:wsdl="http://webservicepilot.tecdoc.net/pegasus-2-0/services/TecdocToCatWL"
       xmlns:env="http://schemas.xmlsoap.org/soap/envelope/" xmlns:ins0="http://webservicepilot.tecdoc.net/pegasus-2-0/services/TecdocToCatWL"
-      xmlns:ins1="http://datatype.cat.tecdoc.net" xmlns:ins2="http://articles.datatype.tocinterface.cat.tecdoc.net"
-      xmlns:ins3="http://specialselection.datatype.tocinterface.cat.tecdoc.net" xmlns:ins4="http://axlesselection.datatype.tocinterface.cat.tecdoc.net"
-      xmlns:ins5="http://carselection.datatype.tocinterface.cat.tecdoc.net" xmlns:ins6="http://options.datatype.tocinterface.cat.tecdoc.net"
+      xmlns:ins1="http://options.datatype.tocinterface.cat.tecdoc.net" xmlns:ins2="http://controlpanel.datatype.tocinterface.cat.tecdoc.net"
+      xmlns:ins3="http://articles.datatype.tocinterface.cat.tecdoc.net" xmlns:ins4="http://carselection.datatype.tocinterface.cat.tecdoc.net"
+      xmlns:ins5="http://datatype.cat.tecdoc.net" xmlns:ins6="http://axlesselection.datatype.tocinterface.cat.tecdoc.net"
       xmlns:ins7="http://motorselection.datatype.tocinterface.cat.tecdoc.net" xmlns:ins8="http://assemblygroupselection.datatype.tocinterface.cat.tecdoc.net"
-      xmlns:ins9="http://controlpanel.datatype.tocinterface.cat.tecdoc.net"><env:Body><ins0:getLinkedChildNodesAllLinkingTarget><wsdl:in><wsdl:provider>330</wsdl:provider><wsdl:linkingTargetType>C</wsdl:linkingTargetType><wsdl:lang>lv</wsdl:lang><wsdl:country>lv</wsdl:country><wsdl:linkingTargetId>10502</wsdl:linkingTargetId></wsdl:in></ins0:getLinkedChildNodesAllLinkingTarget></env:Body></env:Envelope>
+      xmlns:ins9="http://specialselection.datatype.tocinterface.cat.tecdoc.net"><env:Body><ins0:getLinkedChildNodesAllLinkingTarget><wsdl:in><wsdl:provider>330</wsdl:provider><wsdl:linkingTargetType>C</wsdl:linkingTargetType><wsdl:lang>lv</wsdl:lang><wsdl:country>lv</wsdl:country><wsdl:linkingTargetId>10502</wsdl:linkingTargetId></wsdl:in></ins0:getLinkedChildNodesAllLinkingTarget></env:Body></env:Envelope>
     headers:
       soapaction:
       - ! '"getLinkedChildNodesAllLinkingTarget"'
@@ -24,7 +24,7 @@
       message: OK
     headers:
       date:
-      - Mon, 16 Jan 2012 10:56:07 GMT
+      - Tue, 17 Jan 2012 16:31:29 GMT
       server:
       - Apache
       content-length:
